# learning-llm-langchain

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
resources/: test.txt
src/: calculator_tool.py  common.py  ollama.py  open_ai.py  strategy_model.py
src/ch01/: p_05_llm.py  p_06_chat.py  p_07_system.py  p_10_promt.py  p_14_structured.py  p_16.py  p_16_methods.py
src/ch02/: p_30.py  p_30_text_loader.py  p_33_rec_text_splitter.py  p_37_embeddings.py  p_38_load_split_embed.py  p_41_pg_vector.py
src/ch03/: p_62_basic_rag.py  p_69_rewrite.py  p_81_router.py  p_85_semantic_router.py  p_88_text_to_meta.py  p_91_text_to_sql.py
src/ch04/: p_101_state_graph.py  p_105_persist_memory.py  p_96_simple_memory.py
src/ch05/: p_118_chatbot.py  p_121_sql_generator.py
src/ch06/: p_139_basic_agent.py  p_143_force_tool_first.py
src/ch07/: p_156_reflection.py  p_167_supervisor.py
src/ch1/: p_10.py  p_14.py  p_18.py  p_20.py  p_6.py  p_7.py
src/notebooks/: demo.ipynb
